--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,7 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/feradauto"
+  github           : "feradauto"
   google_plus      :
   keybase          :
   instagram        :
