--- a/_config.yml
+++ b/_config.yml
@@ -103,7 +103,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "fernando-gonzalez-adauto-865212158"
   orcid            : 
   pinterest        :
   soundcloud       :
