--- a/_config.yml
+++ b/_config.yml
@@ -86,7 +86,7 @@ author:
   location         : "Zurich, Switzerland"
   employer         :
   pubmed           :
-  googlescholar    : 
+  googlescholar    : "https://scholar.google.com/citations?user=UDVZFY4AAAAJ&hl=en"
   email            : "fgonzalez@ethz.ch"
   researchgate     : 
   cv               : "cv"
