--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Fernando Gonzalez"
 title_separator          : "-"
 name                     : &name "Fernando Gonzalez"
-description              : &description "Data Science Master's student at ETH Zurich"
+description              : &description "Senior Machine Learning Engineer at Kavak.com"
 url                      : https://feradauto.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "feradauto/feradauto.github.io"
