--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Fernando Gonzalez Adauto"
   avatar           : "picture_adj.png"
   bio              : "Machine Learning Engineer at Meta"
-  location         : "Mexico City"
+  location         : "San Francisco"
   employer         :
   pubmed           :
   googlescholar    : "https://scholar.google.com/citations?user=UDVZFY4AAAAJ&hl=en"
